--- a/public/locales/en/sidebar.json
+++ b/public/locales/en/sidebar.json
@@ -53,7 +53,7 @@
     "message": "This special was created by...",
     "time": "00:08"
   },
-  "disclaimer-title": "Link Verifier",
+  "disclaimer-title": "Link Verifier:",
 
 
   "disclaimer": {
